# QRAIOP

./: Dockerfile  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-scan.yml
configs/k8/: controller-deployment.yml  monitoring.yml  namespace.yml  qraiop-example.yml
infrastructure/kubernetes/manifests/: qraiop-demo.yaml
scripts/: setup.sh
src/agents/: __init__.py  agent.py  ai_agent.py  requirements.txt  supervisor.py
src/agents/tests/: test_agent.py
src/chaos/: chaos_engine.py  requirements.txt
src/chaos/recovery/: auto_recovery.py
src/chaos/scenarios/: network.py
src/controllers/: go.mod  go.sum  main.go  placeholder.go
src/controllers/api/v1/: groupversion_info.go  qraiop_types.go  zz_generated.deepcopy.go
src/controllers/controllers/: qraiop_controller.go
src/crypto/: Cargo.toml
src/crypto/benches/: crypto_benchmarks.rs
src/crypto/src/: hybrid.rs  lib.rs  main.rs  utils.rs
src/crypto/src/pqc/: dilithium.rs  kyber.rs  mod.rs
