[package]
name = "qraiop-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Bailey7220 <your-email@example.com>"]
description = "Quantum-resistant cryptographic library for QRAIOP"
license = "Apache-2.0"
repository = "https://github.com/Bailey7220/QRAIOP"

[[bin]]
name = "crypto-demo"
path = "src/main.rs"

[lib]
name = "qraiop_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
oqs = "0.10"
pqcrypto = "0.18.1"
pqcrypto-kyber = "0.7.2"
pqcrypto-dilithium = "0.5.2"
pqcrypto-sphincsplus = "0.7.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "crypto_benchmarks"
harness = false

[features]
default = ["ml-kem", "ml-dsa", "slh-dsa"]
ml-kem = []
ml-dsa = []
slh-dsa = []
hybrid = []
