[package]
name = "qraiop-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Bailey Collins <baileycollins7220@gmail.com>"]
description = "Quantum-resistant cryptographic library for QRAIOP"
license = "MIT"
repository = "https://github.com/Bailey7220/QRAIOP"

[dependencies]
# Post-quantum cryptography
pqcrypto-traits = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"

# Standard cryptography
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
base64 = "0.21"
zeroize = { version = "1.6", features = ["derive"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.3"
proptest = "1.2"

[[bench]]
name = "crypto_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
